--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "streams:write": "node src/streams/write.js",
     "streams:transform": "node src/streams/transform.js",
     "zip:compress": "node src/zip/compress.js",
-    "zip:decompress": "node src/zip/decompress.js"
+    "zip:decompress": "node src/zip/decompress.js",
+    "wt": "node ./wt/main",
+    "cp": "node ./cp/cp"
   },
   "repository": {
     "type": "git",
